Updates to predominant forest type and specie co-occurrence

--- a/Aim2/code/Python/05b_FRP-CBIbc.ipynb
+++ b/Aim2/code/Python/05b_FRP-CBIbc.ipynb
@@ -50,24 +50,26 @@
     {
      "data": {
       "text/plain": [
-       "Index(['grid_index', 'fortypnm_gp', 'fortyp_pct', 'forest_pixels',\n",
-       "       'forest_pct', 'species_gp_n', 'tmid_n', 'ba_live', 'ba_dead', 'ba_ld',\n",
-       "       'tpp_live', 'tpp_dead', 'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld',\n",
-       "       'tree_ht_live', 'tree_ht_dead', 'balive_total', 'badead_total',\n",
-       "       'ba_ld_total', 'tpp_live_total', 'tpp_dead_total', 'tpp_ld_total',\n",
-       "       'qmd_live_total', 'qmd_dead_total', 'qmd_ld_total', 'ba_live_pr',\n",
-       "       'ba_dead_pr', 'ba_ld_pr', 'tpp_live_pr', 'tpp_dead_pr', 'tpp_ld_pr',\n",
-       "       'qmd_live_pr', 'qmd_dead_pr', 'qmd_ld_pr', 'grid_area', 'afd_count',\n",
-       "       'unique_days', 'overlap', 'frp_csum', 'frp_max', 'frp_min', 'frp_mean',\n",
-       "       'frp_p90', 'frp_p95', 'frp_p97', 'frp_p99', 'frp_first', 'day_max_frp',\n",
+       "Index(['grid_index', 'fortypnm_gp', 'fortyp_pixels', 'fortyp_pct',\n",
+       "       'forest_pixels', 'forest_pct', 'canopypct_mean', 'balive_sum',\n",
+       "       'species_gp_n', 'tmid_n', 'ba_live', 'ba_dead', 'ba_ld', 'tpp_live',\n",
+       "       'tpp_dead', 'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld', 'tree_ht_live',\n",
+       "       'tree_ht_dead', 'balive_total', 'badead_total', 'ba_ld_total',\n",
+       "       'tpp_live_total', 'tpp_dead_total', 'tpp_ld_total', 'qmd_live_total',\n",
+       "       'qmd_dead_total', 'qmd_ld_total', 'ba_live_pr', 'ba_dead_pr',\n",
+       "       'ba_ld_pr', 'tpp_live_pr', 'tpp_dead_pr', 'tpp_ld_pr', 'qmd_live_pr',\n",
+       "       'qmd_dead_pr', 'qmd_ld_pr', 'grid_area', 'afd_count', 'unique_days',\n",
+       "       'overlap', 'frp_csum', 'frp_max', 'frp_min', 'frp_mean', 'frp_p90',\n",
+       "       'frp_p95', 'frp_p97', 'frp_p99', 'frp_first', 'day_max_frp',\n",
        "       'dt_max_frp', 'first_obs_date', 'last_obs_date', 't4_max', 't4_mean',\n",
        "       't5_max', 't5_mean', 'day_count', 'night_count', 'frp_max_day',\n",
        "       'frp_max_night', 'frp_csum_day', 'frp_csum_night', 'frp_mean_day',\n",
        "       'frp_mean_night', 'frp_p90_day', 'frp_p90_night', 'frp_p95_day',\n",
        "       'frp_p95_night', 'frp_p97_day', 'frp_p97_night', 'frp_p99_day',\n",
        "       'frp_p99_night', 'frp_first_day', 'frp_first_night', 'Fire_ID',\n",
-       "       'Fire_Name', 'geometry', 'x', 'y', 'erc', 'erc_dv', 'vpd', 'vpd_dv',\n",
-       "       'elev', 'slope', 'chili', 'tpi'],\n",
+       "       'Fire_Name', 'geometry', 'x', 'y', 'erc', 'erc_dv', 'fm1000',\n",
+       "       'fm1000_dv', 'rmin', 'rmin_dv', 'tmmx', 'tmmx_dv', 'vpd', 'vpd_dv',\n",
+       "       'vs', 'vs_dv', 'elev', 'slope', 'chili', 'tpi'],\n",
        "      dtype='object')"
       ]
      },
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "7fe13138-eeed-4d01-8b8a-499d1f4dda5c",
    "metadata": {},
    "outputs": [
@@ -95,7 +97,7 @@
        "319734"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "c4d07d54-a95d-4db0-9717-ca9e3dd04c9a",
    "metadata": {},
    "outputs": [
@@ -116,7 +118,7 @@
        "Index(['Fire_ID', 'grid_index', 'mean', 'p90', 'p95', 'p99', 'stdDev'], dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "38f3c83a-fb31-4c11-8f6c-e9befc22ea4b",
    "metadata": {},
    "outputs": [
@@ -248,7 +250,7 @@
        "4       1.79   0.002359  0.001143   0.119109  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "03f43406-2bb7-42b3-a01d-fdf0bc3e7929",
    "metadata": {},
    "outputs": [
@@ -294,7 +296,7 @@
    ],
    "source": [
     "# Plot FRP by dominant forest type\n",
-    "# create a dataframe with dominance (>80% of the same species)\n",
+    "# create a dataframe with dominance (>50% of the same species)\n",
     "dom = tm_sev[tm_sev['fortyp_pct'] > 50]\n",
     "# Find the median and sort the forest types by FRP\n",
     "med = dom.groupby('fortypnm_gp')['CBIbc_p90'].median().sort_values(ascending=False)\n",
@@ -325,36 +327,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "19a118d4-a57d-4846-9a4c-f61db1846539",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['grid_index', 'fortypnm_gp', 'fortyp_pct', 'forest_pixels',\n",
-       "       'forest_pct', 'species_gp_n', 'tmid_n', 'ba_live', 'ba_dead', 'ba_ld',\n",
-       "       'tpp_live', 'tpp_dead', 'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld',\n",
-       "       'tree_ht_live', 'tree_ht_dead', 'balive_total', 'badead_total',\n",
-       "       'ba_ld_total', 'tpp_live_total', 'tpp_dead_total', 'tpp_ld_total',\n",
-       "       'qmd_live_total', 'qmd_dead_total', 'qmd_ld_total', 'ba_live_pr',\n",
-       "       'ba_dead_pr', 'ba_ld_pr', 'tpp_live_pr', 'tpp_dead_pr', 'tpp_ld_pr',\n",
-       "       'qmd_live_pr', 'qmd_dead_pr', 'qmd_ld_pr', 'grid_area', 'afd_count',\n",
-       "       'unique_days', 'overlap', 'frp_csum', 'frp_max', 'frp_min', 'frp_mean',\n",
-       "       'frp_p90', 'frp_p95', 'frp_p97', 'frp_p99', 'frp_first', 'day_max_frp',\n",
-       "       'dt_max_frp', 'first_obs_date', 'last_obs_date', 't4_max', 't4_mean',\n",
-       "       't5_max', 't5_mean', 'day_count', 'night_count', 'frp_max_day',\n",
-       "       'frp_max_night', 'frp_csum_day', 'frp_csum_night', 'frp_mean_day',\n",
-       "       'frp_mean_night', 'frp_p90_day', 'frp_p90_night', 'frp_p95_day',\n",
-       "       'frp_p95_night', 'frp_p97_day', 'frp_p97_night', 'frp_p99_day',\n",
-       "       'frp_p99_night', 'frp_first_day', 'frp_first_night', 'Fire_ID',\n",
-       "       'Fire_Name', 'geometry', 'x', 'y', 'erc', 'erc_dv', 'vpd', 'vpd_dv',\n",
-       "       'elev', 'slope', 'chili', 'tpi', 'CBIbc_mean', 'CBIbc_p90', 'CBIbc_p95',\n",
-       "       'CBIbc_p99', 'CBIbc_stdDev'],\n",
-       "      dtype='object')"
+       "Index(['grid_index', 'fortypnm_gp', 'fortyp_pixels', 'fortyp_pct',\n",
+       "       'forest_pixels', 'forest_pct', 'canopypct_mean', 'balive_sum',\n",
+       "       'species_gp_n', 'tmid_n',\n",
+       "       ...\n",
+       "       'vs_dv', 'elev', 'slope', 'chili', 'tpi', 'CBIbc_mean', 'CBIbc_p90',\n",
+       "       'CBIbc_p95', 'CBIbc_p99', 'CBIbc_stdDev'],\n",
+       "      dtype='object', length=104)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "6fe6ef3d-3548-4734-9cff-885b0ae81ef1",
    "metadata": {},
    "outputs": [
@@ -387,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "4187495a-ff0a-46b3-bc00-ad96eac73b42",
    "metadata": {},
    "outputs": [
@@ -413,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "f0a6df8f-3484-431f-8670-8d52a8a45ea8",
    "metadata": {},
    "outputs": [
@@ -432,47 +421,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "7bf8964b-d45e-41ae-b6ed-2937336d5cc8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['grid_index', 'fortypnm_gp', 'fortyp_pct', 'forest_pixels',\n",
-       "       'forest_pct', 'species_gp_n', 'tmid_n', 'ba_live', 'ba_dead', 'ba_ld',\n",
-       "       'tpp_live', 'tpp_dead', 'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld',\n",
-       "       'tree_ht_live', 'tree_ht_dead', 'balive_total', 'badead_total',\n",
-       "       'ba_ld_total', 'tpp_live_total', 'tpp_dead_total', 'tpp_ld_total',\n",
-       "       'qmd_live_total', 'qmd_dead_total', 'qmd_ld_total', 'ba_live_pr',\n",
-       "       'ba_dead_pr', 'ba_ld_pr', 'tpp_live_pr', 'tpp_dead_pr', 'tpp_ld_pr',\n",
-       "       'qmd_live_pr', 'qmd_dead_pr', 'qmd_ld_pr', 'grid_area', 'afd_count',\n",
-       "       'unique_days', 'overlap', 'frp_csum', 'frp_max', 'frp_min', 'frp_mean',\n",
-       "       'frp_p90', 'frp_p95', 'frp_p97', 'frp_p99', 'frp_first', 'day_max_frp',\n",
-       "       'dt_max_frp', 'first_obs_date', 'last_obs_date', 't4_max', 't4_mean',\n",
-       "       't5_max', 't5_mean', 'day_count', 'night_count', 'frp_max_day',\n",
-       "       'frp_max_night', 'frp_csum_day', 'frp_csum_night', 'frp_mean_day',\n",
-       "       'frp_mean_night', 'frp_p90_day', 'frp_p90_night', 'frp_p95_day',\n",
-       "       'frp_p95_night', 'frp_p97_day', 'frp_p97_night', 'frp_p99_day',\n",
-       "       'frp_p99_night', 'frp_first_day', 'frp_first_night', 'Fire_ID',\n",
-       "       'Fire_Name', 'geometry', 'x', 'y', 'erc', 'erc_dv', 'vpd', 'vpd_dv',\n",
-       "       'elev', 'slope', 'chili', 'tpi', 'CBIbc_mean', 'CBIbc_p90', 'CBIbc_p95',\n",
-       "       'CBIbc_p99', 'CBIbc_stdDev'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['grid_index', 'fortypnm_gp', 'fortyp_pixels', 'fortyp_pct',\n",
+      "       'forest_pixels', 'forest_pct', 'canopypct_mean', 'balive_sum',\n",
+      "       'species_gp_n', 'tmid_n',\n",
+      "       ...\n",
+      "       'vs_dv', 'elev', 'slope', 'chili', 'tpi', 'CBIbc_mean', 'CBIbc_p90',\n",
+      "       'CBIbc_p95', 'CBIbc_p99', 'CBIbc_stdDev'],\n",
+      "      dtype='object', length=104)\n"
+     ]
     }
    ],
    "source": [
-    "tm_sev.columns"
+    "print(tm_sev.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "3e873edf-1a76-49c1-92ec-1cdf5ad07ce3",
    "metadata": {},
    "outputs": [
@@ -534,104 +507,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "93e7f4e5-ffaa-4c3f-abaa-40f83162b171",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tree Type: Lodgepole - Pearson correlation: 0.19, p-value: 0.0000\n",
-      "Tree Type: Mixed-conifer - Pearson correlation: 0.12, p-value: 0.0000\n",
-      "Tree Type: Oak-woodland - Pearson correlation: -0.00, p-value: 0.8955\n",
-      "Tree Type: Piñon-juniper - Pearson correlation: 0.21, p-value: 0.0000\n",
-      "Tree Type: Ponderosa - Pearson correlation: 0.19, p-value: 0.0000\n",
-      "Tree Type: Quaking aspen - Pearson correlation: 0.33, p-value: 0.0000\n",
-      "Tree Type: Rocky mountain juniper - Pearson correlation: 0.35, p-value: 0.0000\n",
-      "Tree Type: Spruce-fir - Pearson correlation: 0.26, p-value: 0.0000\n",
-      "\n",
-      "\n",
-      "\n",
-      "Correlation by Tree Type:\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>correlation</th>\n",
-       "      <th>p_value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Rocky mountain juniper</th>\n",
-       "      <td>0.353360</td>\n",
-       "      <td>3.074318e-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Quaking aspen</th>\n",
-       "      <td>0.332411</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Spruce-fir</th>\n",
-       "      <td>0.257327</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Piñon-juniper</th>\n",
-       "      <td>0.207062</td>\n",
-       "      <td>1.862836e-69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ponderosa</th>\n",
-       "      <td>0.186958</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lodgepole</th>\n",
-       "      <td>0.186562</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        correlation       p_value\n",
-       "Rocky mountain juniper     0.353360  3.074318e-16\n",
-       "Quaking aspen              0.332411  0.000000e+00\n",
-       "Spruce-fir                 0.257327  0.000000e+00\n",
-       "Piñon-juniper              0.207062  1.862836e-69\n",
-       "Ponderosa                  0.186958  0.000000e+00\n",
-       "Lodgepole                  0.186562  0.000000e+00"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Correlations between FRP and CBIbc for dominant species\n",
     "df = dom.copy() # work with a copy\n",
