Fixing daytime cumulative FRP statistic

--- a/Aim2/code/Python/03c_viirs-afd-processing.ipynb
+++ b/Aim2/code/Python/03c_viirs-afd-processing.ipynb
@@ -657,7 +657,7 @@
     {
      "data": {
       "text/plain": [
-       "192"
+       "212"
       ]
      },
      "execution_count": 15,
@@ -1005,7 +1005,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3112999493d14096b4648009ac4fc0fd",
+       "model_id": "522baa026244457b941763f9b5f598dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1021,7 +1021,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Total elapsed time: 7.07 minutes.\n",
+      "Total elapsed time: 7.18 minutes.\n",
       "\n",
       "\n",
       "~~~~~~~~~~\n",
@@ -1113,8 +1113,8 @@
     "    aggregated['night_count'] = daynight_stats['count'].get('Night', 0)\n",
     "    aggregated['frp_max_day'] = daynight_stats['max'].get('Day', 0)\n",
     "    aggregated['frp_max_night'] = daynight_stats['max'].get('Night', 0)\n",
-    "    aggregated['frp_csum_day'] = daynight_stats['max'].get('Day', 0)\n",
-    "    aggregated['frp_csum_night'] = daynight_stats['max'].get('Night', 0)\n",
+    "    aggregated['frp_csum_day'] = daynight_stats['sum'].get('Day', 0)\n",
+    "    aggregated['frp_csum_night'] = daynight_stats['sum'].get('Night', 0)\n",
     "    aggregated['frp_mean_day'] = daynight_stats['mean'].get('Day', 0)\n",
     "    aggregated['frp_mean_night'] = daynight_stats['mean'].get('Night', 0)\n",
     "    aggregated['frp_p90_day'] = daynight_stats['p90'].get('Day', 0)\n",
@@ -1225,7 +1225,9 @@
        "      <th></th>\n",
        "      <th>grid_index</th>\n",
        "      <th>frp_csum</th>\n",
+       "      <th>frp_csum_day</th>\n",
        "      <th>frp_max</th>\n",
+       "      <th>frp_max_day</th>\n",
        "      <th>frp_p90</th>\n",
        "      <th>frp_p95</th>\n",
        "      <th>frp_p97</th>\n",
@@ -1242,7 +1244,9 @@
        "      <th>583</th>\n",
        "      <td>1952252</td>\n",
        "      <td>4832.147246</td>\n",
+       "      <td>137.104369</td>\n",
        "      <td>3974.643014</td>\n",
+       "      <td>96.165512</td>\n",
        "      <td>501.272778</td>\n",
        "      <td>1829.803671</td>\n",
        "      <td>2687.739408</td>\n",
@@ -1257,6 +1261,8 @@
        "      <th>7300</th>\n",
        "      <td>2083734</td>\n",
        "      <td>4754.565888</td>\n",
+       "      <td>4741.164279</td>\n",
+       "      <td>4153.693155</td>\n",
        "      <td>4153.693155</td>\n",
        "      <td>211.065592</td>\n",
        "      <td>1987.989914</td>\n",
@@ -1272,7 +1278,9 @@
        "      <th>4301</th>\n",
        "      <td>2010999</td>\n",
        "      <td>4357.730177</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>4134.826020</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>97.530697</td>\n",
        "      <td>1914.746262</td>\n",
        "      <td>2802.778165</td>\n",
@@ -1287,7 +1295,9 @@
        "      <th>737</th>\n",
        "      <td>1958998</td>\n",
        "      <td>4312.394386</td>\n",
+       "      <td>63.645983</td>\n",
        "      <td>3174.152862</td>\n",
+       "      <td>54.924336</td>\n",
        "      <td>904.827019</td>\n",
        "      <td>2039.489941</td>\n",
        "      <td>2493.355109</td>\n",
@@ -1302,6 +1312,8 @@
        "      <th>85</th>\n",
        "      <td>1986274</td>\n",
        "      <td>3586.602685</td>\n",
+       "      <td>3584.354289</td>\n",
+       "      <td>3527.881304</td>\n",
        "      <td>3527.881304</td>\n",
        "      <td>1778.431423</td>\n",
        "      <td>2653.156364</td>\n",
@@ -1317,6 +1329,8 @@
        "      <th>2566</th>\n",
        "      <td>1963783</td>\n",
        "      <td>3561.334090</td>\n",
+       "      <td>3558.820128</td>\n",
+       "      <td>3077.580711</td>\n",
        "      <td>3077.580711</td>\n",
        "      <td>1775.177120</td>\n",
        "      <td>2426.378915</td>\n",
@@ -1332,6 +1346,8 @@
        "      <th>778</th>\n",
        "      <td>1984640</td>\n",
        "      <td>3509.955357</td>\n",
+       "      <td>2061.742993</td>\n",
+       "      <td>876.277730</td>\n",
        "      <td>876.277730</td>\n",
        "      <td>294.821104</td>\n",
        "      <td>658.539640</td>\n",
@@ -1347,6 +1363,8 @@
        "      <th>779</th>\n",
        "      <td>1984641</td>\n",
        "      <td>3491.016628</td>\n",
+       "      <td>2096.469550</td>\n",
+       "      <td>1790.428678</td>\n",
        "      <td>1790.428678</td>\n",
        "      <td>334.111039</td>\n",
        "      <td>868.306273</td>\n",
@@ -1362,7 +1380,9 @@
        "      <th>580</th>\n",
        "      <td>1952249</td>\n",
        "      <td>3270.576635</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>2976.490438</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>767.197691</td>\n",
        "      <td>1871.844064</td>\n",
        "      <td>2313.702614</td>\n",
@@ -1377,7 +1397,9 @@
        "      <th>8358</th>\n",
        "      <td>2101604</td>\n",
        "      <td>3221.785712</td>\n",
+       "      <td>13.577951</td>\n",
        "      <td>2574.522041</td>\n",
+       "      <td>13.577951</td>\n",
        "      <td>1017.110384</td>\n",
        "      <td>1795.816213</td>\n",
        "      <td>2107.298544</td>\n",
@@ -1393,41 +1415,41 @@
        "</div>"
       ],
       "text/plain": [
-       "      grid_index     frp_csum      frp_max      frp_p90      frp_p95  \\\n",
-       "583      1952252  4832.147246  3974.643014   501.272778  1829.803671   \n",
-       "7300     2083734  4754.565888  4153.693155   211.065592  1987.989914   \n",
-       "4301     2010999  4357.730177  4134.826020    97.530697  1914.746262   \n",
-       "737      1958998  4312.394386  3174.152862   904.827019  2039.489941   \n",
-       "85       1986274  3586.602685  3527.881304  1778.431423  2653.156364   \n",
-       "2566     1963783  3561.334090  3077.580711  1775.177120  2426.378915   \n",
-       "778      1984640  3509.955357   876.277730   294.821104   658.539640   \n",
-       "779      1984641  3491.016628  1790.428678   334.111039   868.306273   \n",
-       "580      1952249  3270.576635  2976.490438   767.197691  1871.844064   \n",
-       "8358     2101604  3221.785712  2574.522041  1017.110384  1795.816213   \n",
+       "      grid_index     frp_csum  frp_csum_day      frp_max  frp_max_day  \\\n",
+       "583      1952252  4832.147246    137.104369  3974.643014    96.165512   \n",
+       "7300     2083734  4754.565888   4741.164279  4153.693155  4153.693155   \n",
+       "4301     2010999  4357.730177      0.000000  4134.826020     0.000000   \n",
+       "737      1958998  4312.394386     63.645983  3174.152862    54.924336   \n",
+       "85       1986274  3586.602685   3584.354289  3527.881304  3527.881304   \n",
+       "2566     1963783  3561.334090   3558.820128  3077.580711  3077.580711   \n",
+       "778      1984640  3509.955357   2061.742993   876.277730   876.277730   \n",
+       "779      1984641  3491.016628   2096.469550  1790.428678  1790.428678   \n",
+       "580      1952249  3270.576635      0.000000  2976.490438     0.000000   \n",
+       "8358     2101604  3221.785712     13.577951  2574.522041    13.577951   \n",
        "\n",
-       "          frp_p97      frp_p99   frp_min   frp_first  frp_first_day  \\\n",
-       "583   2687.739408  3545.675145  0.381506    0.883894      96.165512   \n",
-       "7300  2854.271210  3720.552507  2.818947   60.951767      60.951767   \n",
-       "4301  2802.778165  3690.810069  0.003782    3.914322       0.000000   \n",
-       "737   2493.355109  2947.220278  1.511593    6.695362       7.210054   \n",
-       "85    3003.046340  3352.936316  1.096108   22.407462      22.407462   \n",
-       "2566  2686.859633  2947.340352  0.043046  472.773529     472.773529   \n",
-       "778    815.130607   855.895355  0.026187   31.184336      31.184336   \n",
-       "779   1237.155235  1606.004197  0.194520  152.517873      17.547271   \n",
-       "580   2313.702614  2755.561163  0.286664    1.375151       0.000000   \n",
-       "8358  2107.298544  2418.780876  2.421777    2.421777      13.577951   \n",
+       "          frp_p90      frp_p95      frp_p97      frp_p99   frp_min  \\\n",
+       "583    501.272778  1829.803671  2687.739408  3545.675145  0.381506   \n",
+       "7300   211.065592  1987.989914  2854.271210  3720.552507  2.818947   \n",
+       "4301    97.530697  1914.746262  2802.778165  3690.810069  0.003782   \n",
+       "737    904.827019  2039.489941  2493.355109  2947.220278  1.511593   \n",
+       "85    1778.431423  2653.156364  3003.046340  3352.936316  1.096108   \n",
+       "2566  1775.177120  2426.378915  2686.859633  2947.340352  0.043046   \n",
+       "778    294.821104   658.539640   815.130607   855.895355  0.026187   \n",
+       "779    334.111039   868.306273  1237.155235  1606.004197  0.194520   \n",
+       "580    767.197691  1871.844064  2313.702614  2755.561163  0.286664   \n",
+       "8358  1017.110384  1795.816213  2107.298544  2418.780876  2.421777   \n",
        "\n",
-       "      day_count  night_count  \n",
-       "583           4           10  \n",
-       "7300          9            3  \n",
-       "4301          0           12  \n",
-       "737           3            7  \n",
-       "85            4            2  \n",
-       "2566          3            3  \n",
-       "778          14           15  \n",
-       "779           8           11  \n",
-       "580           0            9  \n",
-       "8358          1            7  "
+       "       frp_first  frp_first_day  day_count  night_count  \n",
+       "583     0.883894      96.165512          4           10  \n",
+       "7300   60.951767      60.951767          9            3  \n",
+       "4301    3.914322       0.000000          0           12  \n",
+       "737     6.695362       7.210054          3            7  \n",
+       "85     22.407462      22.407462          4            2  \n",
+       "2566  472.773529     472.773529          3            3  \n",
+       "778    31.184336      31.184336         14           15  \n",
+       "779   152.517873      17.547271          8           11  \n",
+       "580     1.375151       0.000000          0            9  \n",
+       "8358    2.421777      13.577951          1            7  "
       ]
      },
      "execution_count": 22,
@@ -1438,8 +1460,9 @@
    "source": [
     "fire_grids.sort_values(\n",
     "    by='frp_csum', ascending=False\n",
-    ")[['grid_index','frp_csum','frp_max','frp_p90', 'frp_p95', 'frp_p97', 'frp_p99',\n",
-    "   'frp_min','frp_first','frp_first_day', 'day_count','night_count']].head(10)"
+    ")[['grid_index','frp_csum','frp_csum_day','frp_max','frp_max_day',\n",
+    "   'frp_p90', 'frp_p95', 'frp_p97', 'frp_p99','frp_min','frp_first',\n",
+    "   'frp_first_day', 'day_count','night_count']].head(10)"
    ]
   },
   {
@@ -1452,12 +1475,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cumulative W/km2 captured: 12504824.72\n"
+      "Cumulative FRP (total): 12504824.72 (W/km2)\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Cumulative W/km2 captured: {round(fire_grids['frp_csum'].sum(), 2)}\")"
+    "print(f\"Cumulative FRP (total): {round(fire_grids['frp_csum'].sum(), 2)} (W/km2)\")"
    ]
   },
   {
